# CAD2GIS

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
CAD2GIS/plugincad2gis/: .gitignore  README.md  pyproject.toml
CAD2GIS/plugincad2gis/.agents/plugins/: marketplace.json
CAD2GIS/plugincad2gis/.firecrawl/: xa-202610-competition.md
CAD2GIS/plugincad2gis/data/organizer/封面扉页/: 东溪镇电力、通信等线路下地工程-封面.doc  东溪镇电力、通信等线路下地工程-扉页.doc
CAD2GIS/plugincad2gis/data/organizer/水/: A3+TJ.dwg  ML-目录.dwg  ML-目录.dwl  ML-目录.dwl2  S-01 综合管网标准横断面图.dwg  S-04 给水管道纵断面图.dwg  S-05给水管道检查井及节点坐标表.dwg  S-06 管道管沟开挖及回填图.dwg  S-07给水节点大样图.dwg  S-08路面、人行道和树池恢复大样图.dwg  TJ.dwg  给水及消火栓施工图设计说明.doc
CAD2GIS/plugincad2gis/data/organizer/燃气/: A3+TJ.dwg  TJ.dwg  rq-04 燃气节点坐标表.dwg  rq-06 管道管沟开挖及回填图.dwg  rq-07路面、人行道和树池恢复大样图.dwg  rq－05阀门井大样图.dwg  燃气施工图设计说明.doc
CAD2GIS/plugincad2gis/data/organizer/电力/: 目录说明和大样图_t7_t7_t7.dwg
CAD2GIS/plugincad2gis/data/organizer/电气+通信/: A2+TJ.dwg  A3+TJ.dwg  DS-01 电力总平面布置图.dwl2  DS-02 通信总平面布置图.dwl  DS-02 通信总平面布置图.dwl2  DS-06 通信排管大样图.dwg  DS-07 电力电缆井大样图.dwg  东溪联通.dwg  (+7 more)
CAD2GIS/plugincad2gis/demo/: app.js  gen_report.py  index.html  live.css  live.js  styles.css
CAD2GIS/plugincad2gis/demo/data/: report.js
CAD2GIS/plugincad2gis/demo/server/: __init__.py  app.py  live.html
CAD2GIS/plugincad2gis/docs/: architecture.md  duct_verification_runbook.md  technical_plan.md  verification_report.md
CAD2GIS/plugincad2gis/env/: environment.lock.yml  environment.yml
CAD2GIS/plugincad2gis/qgis_plugin/: __init__.py  dockwidget.py  install.py  metadata.txt  plugin.py
CAD2GIS/plugincad2gis/samples/: synthetic_comms.dxf
CAD2GIS/plugincad2gis/src/cad2gis/: __init__.py  attributes.py  cli.py  corrections.py  crs.py  diagnostics.py  doctor.py  envcheck.py  evidence.py  feature_context.py  gcp.py  ingest.py  model.py  network.py  parse.py  pipeline.py  profile.py  refine.py  samples.py  topology.py
CAD2GIS/plugincad2gis/tests/: test_attributes.py  test_cli_doctor.py  test_context_mapping.py  test_corrections.py  test_crs.py  test_diagnostics.py  test_gcp.py  test_mapping.py  test_network.py  test_node_blocks.py  test_per_feature.py  test_pipeline.py  test_qgis_plugin_install.py  test_qgis_plugin_lifecycle.py  test_real_mapping.py  test_refine.py  test_smoke.py  test_topology.py  test_verify_protocol.py  test_warehouse.py
(+633 files in other folders)
