[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cad2gis"
version = "0.1.0"
description = "Correct, verifiable transformation of historical CAD (DWG/DXF) into a QGIS-based GIS system with GeoPackage warehousing (FiberHome XA-202610, Sub-track 2)."
readme = "README.md"
requires-python = ">=3.11"
# Heavy binary deps (gdal, geopandas, qgis, grass) come from the conda env (env/environment.yml).
# These light deps are conda-provided too; listed so `pip install -e .` sees them satisfied.
dependencies = [
  "ezdxf",
  "pyyaml",
  "numpy",
  "shapely",
  "pyproj",
]

[project.optional-dependencies]
gis = ["geopandas", "pyogrio", "fiona"]
dev = ["pytest"]

[project.scripts]
cad2gis = "cad2gis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
